--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.androidloginapplication"
+        applicationId 'com.example.gather'
         minSdk 22
         targetSdk 32
         versionCode 1
