--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
         android:theme="@style/Theme.AndroidLoginApplication"
         tools:targetApi="31">
         <activity
+            android:name=".InventoryPage"
+            android:exported="false" />
+        <activity
+            android:name=".AddItemPage"
+            android:exported="false" />
+        <activity
             android:name=".GroupDetailsPage"
             android:exported="false" />
         <activity
